Калькулятор работает корректно

--- a/calc/index.html
+++ b/calc/index.html
@@ -17,26 +17,26 @@
 
     <script>
         function Plus() {
-            let x = 3;
-            let y = 5;
-            alert(x + y);
+            let x = prompt("Первое число?");
+            let y = prompt("Второе число?");
+            alert(Number(x) + Number(y));
         }
 
         function Minus() {
-            let x = 3;
-            let y = 5;
+            let x = prompt("Первое число?");
+            let y = prompt("Второе число?");
             alert(x - y);
         }
 
         function Multi() {
-            let x = 3;
-            let y = 5;
+            let x = prompt("Первое число?");
+            let y = prompt("Второе число?");
             alert(x * y);
         }
 
         function Divide() {
-            let x = 3;
-            let y = 5;
+            let x = prompt("Первое число?");
+            let y = prompt("Второе число?");
             alert(x / y);
         }
     </script>
