--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <script>
         function Hello() {
-            let username = "Маша";
+            let username = prompt("What is Your name?")
             let message = `Привет, ${username}!`;
             alert(message);
         }
