--- a/calc/index.html
+++ b/calc/index.html
@@ -20,10 +20,10 @@
         <input id="number1" type="number" />
         <input id="number2" />
 
-        <button onClick="Plus()"> + </button>
-        <button onClick="Minus()"> - </button>
-        <button onClick="Multi()"> x </button>
-        <button onClick="Divide()"> / </button>
+        <button id="plus"> + </button>
+        <button id="minus"> - </button>
+        <button id="multi"> x </button>
+        <button id="divide"> / </button>
 
         <p id="result"></p>
 
